--- a/WebGL-Coursework.html
+++ b/WebGL-Coursework.html
@@ -176,10 +176,10 @@
 
 
 			// Basic ambient lighting.
-			scene.add(new THREE.AmbientLight(0xffffff));
+			//scene.add(new THREE.AmbientLight(0xffffff));
 			// TASK: add more complex lighting for 'face' rendering mode (requirement 4).
 			const color = 0xFFFFFF;
-			const intensity = 0.4;
+			const intensity = 0.8;
 			const light = new THREE.DirectionalLight(color, intensity);
 			light.position.set(-1, 2, 4);
 			scene.add(light);
