--- a/WebGL-Coursework.html
+++ b/WebGL-Coursework.html
@@ -21,12 +21,13 @@
 <body>
 	<script src="three-r134.js"></script>
 	<script src="dat.gui.min.js"></script>
+	<script src="OBJLoader.js"></script>
 	<script>
 		"use strict"; // https://stackoverflow.com/q/1335851/72470
 
 		// Global variables that are available in all functions.
 		// Note: You can add your own here, e.g. to store the rendering mode.
-		var camera, scene, renderer, mesh;
+		var camera, scene, renderer, mesh, bunny;
 		var x = new THREE.Vector3(1,0,0);
 		var y = new THREE.Vector3(0,1,0);
 		var z = new THREE.Vector3(0,0,1);
@@ -48,6 +49,10 @@
 				cubeOptions.rotation_z = 0;
 			}
 		};
+
+		var bunnyParams = {
+                enable: false,
+}
 
 		var cameraOptions = {
 			orbit: false,
@@ -74,6 +79,13 @@
         new THREE.MeshBasicMaterial({ map: loader.load('Textures/dice-five.png')}), //front side
         new THREE.MeshBasicMaterial({ map: loader.load('Textures/dice-six.png')}), //back side
     ];
+
+		const objectLoader = new THREE.OBJLoader();
+		var objloader = new THREE.OBJLoader( );
+    objloader.load( 'bunny-5000.obj',
+			function ( object ) {
+				bunny = object;
+			});
 
 
 		// // TASK: Draw a cube (requirement 1)-----------------
@@ -110,6 +122,13 @@
 		gui.add(cubeOptions, 'reset').onChange((value) =>{
 			resetSliders();
 		});
+
+		var bunnyFolder = gui.addFolder( 'bunny Controls' );
+    var addBunny = bunnyFolder.add( bunnyParams, 'enable' ).name( 'Enable Bunny' )
+    	.onChange( function(value) {
+      	if ( value == true ) scene.add( bunny );
+      	else scene.remove( bunny );
+    });
 
 
 		/* Here is the update */
