Fixed vertex mode Orbit still not 100%

--- a/WebGL-Coursework.html
+++ b/WebGL-Coursework.html
@@ -27,7 +27,7 @@
 
 		// Global variables that are available in all functions.
 		// Note: You can add your own here, e.g. to store the ing mode.
-		var camera, scene, renderer, mesh, bunny;
+		var camera, scene, renderer, mesh, bunny, vBunny;
 		var x = new THREE.Vector3(1,0,0);
 		var y = new THREE.Vector3(0,1,0);
 		var z = new THREE.Vector3(0,0,1);
@@ -52,6 +52,7 @@
 
 		var bunnyOptions = {
       enable: false,
+			vertex: false,
 			rotation_x: 0,
 			rotation_y: 0,
 			rotation_z: 0,
@@ -117,6 +118,8 @@
 
 		//Add cube to scene
 		scene.add( cube );//Default pos = (0,0,0)
+		//END TASK 1-------------------------------------------
+
 		var velocity = new THREE.Vector3();
 		var tPrev = performance.now();
 
@@ -209,10 +212,8 @@
 			// Draw a helper grid in the x-z plane (note: y is up).
 			scene.add(new THREE.GridHelper(10, 20, 0xffffff));
 
-			// TASK: Draw a cube (requirement 1).
-			// TASK: Visualise the axes of the global coordinate system (requirment 2).
+			// TASK: Visualise the axes of the global coordinate system (requirment 2).------
 
-			// TASK: Visualise the axes of the global coordinate system (requirment 2).
 			const lineMatX = new THREE.LineBasicMaterial( {color: 0xff0000});//Red
 			const lineMatY = new THREE.LineBasicMaterial( {color: 0x0ff00});//Green
 			const lineMatZ = new THREE.LineBasicMaterial( {color: 0x000ff});//Blue
@@ -243,6 +244,8 @@
 			//Add objects into scene
 			scene.add(lineY, lineX, lineZ);
 
+			//END TASK 2-------------------------------
+
 
 			// Basic ambient lighting.
 			//scene.add(new THREE.AmbientLight(0xffffff));
@@ -271,32 +274,30 @@
 			renderer.setSize(window.innerWidth, window.innerHeight);
 		}
 
-		function setBunnyRender(mode) {
-			var b;
+		function setBunnyRender(mode,b) {
 	 			if (mode == "edge") {
-					console.log('edging');
-					if (!bunnyOptions.enable) {
-						scene.add(bunny);
-						bunnyOptions.enable == true;
-						scene.remove(b);
-					};
+						if (bunnyOptions.vertex) {
+							console.log('jefe');
+							scene.remove(vBunny);
+							scene.add(bunny);
+							bunnyOptions.vertex = false;
+						}
 						bunny.children[0].material.wireframe = true;
 					}
 				if (mode == "vertex") {
-					scene.remove(bunny);
-					bunnyOptions.enable = false;
-					var bmat = new THREE.PointsMaterial({color: 0xFF0000});
-					var bgeo = bunny.children[0].geometry;
-					bmat.size = 0.1;
-					b = new THREE.Points( bgeo, bmat );
-					scene.add(b);
+					scene.remove(bunny)
+					bunnyOptions.vertex = true;
+
+					scene.add(vBunny)
+
+
 					}
 				if (mode == "face") {
-					if (!bunnyOptions.enable) {
-						scene.add(bunny);
-						bunnyOptions.enable == true;
-						scene.remove(b);
-					};
+					if (bunnyOptions.vertex) {
+						scene.remove(vBunny)
+						scene.add(bunny)
+						bunnyOptions.vertex = false;
+					}
 					bunny.children[0].material.wireframe = false;
 				}
 		}
@@ -337,6 +338,7 @@
 			velocity.x -= velocity.x * 1.2 * delta;
 			velocity.y -= velocity.y * 1.2 * delta;
 			velocity.z -= velocity.z * 1.2 * delta;
+
 
 
       //if the user pressed 'up' or 'w', set velocity.z to a value > 0.
@@ -393,8 +395,19 @@
 
 				case 'v': // v = vertex
 					setCubeRender("vertex");
+					var bmat = new THREE.PointsMaterial({color: 0xFF0000});
+					var bgeo = bunny.children[0].geometry;
+
+					bmat.size = 0.025;
+					vBunny = new THREE.Points( bgeo, bmat );
+					vBunny.scale.x = 0.4;
+					vBunny.scale.y = 0.4;
+					vBunny.scale.z = 0.4;
+					vBunny.position.set(-0.4,0,-0.1);
 					setBunnyRender("vertex");
 					break;
+
+
 
 				case 'ArrowLeft':
 					cameraOptions.moveLeft = true;
