--- a/WebGL-Coursework.html
+++ b/WebGL-Coursework.html
@@ -22,44 +22,26 @@
 	<script src="three-r134.js"></script>
 	<script src="dat.gui.min.js"></script>
 	<script src="OBJLoader.js"></script>
-
-
-
-<script type="module">
+	<script type="module">
 
 		"use strict"; // https://stackoverflow.com/q/1335851/72470
+		//Setup Cannon Physics World
 		import * as CANNON from 'https://cdn.skypack.dev/cannon-es/dist/cannon-es.js'
-		const world = new CANNON.World({gravity: new CANNON.Vec3(0, -9.82, 0)});
+		const world = new CANNON.World({gravity: new CANNON.Vec3(0, -9.82, 0)}); //Gravity: 9.82m/s
 
+		//Global variables
+		var camera, scene, renderer, mesh, bunny, vBunny, boxBody, plane, cubeMesh, grid ;
 
-
-
-
-
-		// Setup our physics world
-		//const world = new CANNON.World({gravity: new CANNON.Vec3(0, -9.82, 0)});
-
-		// Global variables that are available in all functions.
-		// Note: You can add your own here, e.g. to store the ing mode.
-		var camera, scene, renderer, mesh, bunny, vBunny, boxBody, gravBox,cubeMesh, grid ;
-		var x = new THREE.Vector3(1,0,0);
-		var y = new THREE.Vector3(0,1,0);
-		var z = new THREE.Vector3(0,0,1);
-
-
-
-
-
-		// Initialise the scene, and draw it for the first time.
+		//Create set of paramters for Cube
 		var cubeOptions = {
 			wireframe: false,
-			drawCube: true,
+			enable: true,
 			diceMode: false,
 			spin: false,
 			rotation_x: 0,
 			rotation_y: 0,
 			rotation_z: 0,
-			resetAge: false,
+			//Reset function: invoked by GUI button to reset cube params
 			reset: function() {
 				cube.rotation.x = 0;
 				cube.rotation.y = 0;
@@ -70,12 +52,14 @@
 			}
 		};
 
+		//Create set of parameters for Bunny OBJ object
 		var bunnyOptions = {
       enable: false,
 			vertex: false,
 			rotation_x: 0,
 			rotation_y: 0,
 			rotation_z: 0,
+			//Reset function: invoked by GUI button to reset cube params
 			reset: function() {
 				bunny.rotation.x = 0;
 				bunny.rotation.y = 0;
@@ -85,7 +69,7 @@
 				bunnyOptions.rotation_z = 0;
 			}
 }
-
+		//Create set of parameters for camera in scnee
 		var cameraOptions = {
 			orbit: false,
 			moveUp: false,
@@ -96,24 +80,34 @@
 			moveOut: false,
 		};
 
+		//Setup three.js environment
 		init();
-//Gravity Controls
-		const size = 1
-		const halfExtents = new CANNON.Vec3(size, size, size)
-		const boxShape = new CANNON.Box(halfExtents)
-		boxBody = new CANNON.Body({ mass: 1, shape: boxShape })
-		world.addBody(boxBody)
+		init_world();
+		create_gui();
 
-		const groundBody = new CANNON.Body({
-			type: CANNON.Body.STATIC,
-			shape: new CANNON.Plane(),
-		})
-		groundBody.quaternion.setFromEuler(-Math.PI / 2, 0, 0) // make it face up
-		world.addBody(groundBody)
+		//Define physics world
+		function init_world() {
+			//Create & Add body to hold physics dice
+			const boxShape = new CANNON.Box(new CANNON.Vec3(1, 1, 1));
+			boxBody = new CANNON.Body({ mass: 1, shape: boxShape })
+			world.addBody(boxBody)
 
-		//Create Texture:
-		//Load images:
+			//Create ground plane for collisions
+			const groundBody = new CANNON.Body({
+				type: CANNON.Body.STATIC,
+				shape: new CANNON.Plane(),
+			})
+			//Set quaternion to determine rotation (up for ground plane)
+			groundBody.quaternion.setFromEuler(-Math.PI / 2, 0, 0)
+			world.addBody(groundBody)
 
+			const geometry = new THREE.PlaneGeometry( 30, 30 );
+			const material = new THREE.MeshBasicMaterial( {color: 0x808080, side: THREE.DoubleSide} );//nardo grey
+			plane = new THREE.Mesh(geometry, material);
+			plane.rotation.x = Math.PI / 2;
+	}
+
+		//Load texture for dice
 		const textureLoader = new THREE.TextureLoader();
 		const loader = new THREE.TextureLoader();
     const cubeMaterials = [
@@ -125,167 +119,157 @@
         new THREE.MeshBasicMaterial({ map: loader.load('Textures/dice-six.png')}), //back side
     ];
 
+		//Load bunny object using OBJLoader.js
 		var objloader = new THREE.OBJLoader( );
     objloader.load( 'bunny-5000.obj',
 			function ( object ) {
 				bunny = object;
+				//Manually set scale and position of bunny
+				//XXX: Optimize with bounding box scaling factors
 				bunny.scale.x = 0.4;
 				bunny.scale.y = 0.4;
 				bunny.scale.z = 0.4;
 				bunny.position.set(-0.4,0,-0.1);
-				//scene.add( pivot );
-
 			});
 
 
-		// // TASK: Draw a cube (requirement 1)-----------------
-		//Define Box
+		//TASK: Draw a cube (requirement 1)-----------------
+		//Define cube from box geometry & phong material
 		const geometry = new THREE.BoxGeometry(2,2,2);
-		//Define material
 		const material = new THREE.MeshPhongMaterial({ color: 0x00ffff, wireframe: false });
-		//Build cube using box geometry & material
-		//Mesh => Takes Geometry and applies Material
 		var cube = new THREE.Mesh( geometry, cubeMaterials);
-		//cube.position.set(0,0,0)
 
 		//Add cube to scene
 		scene.add( cube );//Default pos = (0,0,0)
 		//END TASK 1-------------------------------------------
 
+		//Define variables for animate function
+		//TODO: Find a place for this
 		var velocity = new THREE.Vector3();
-		var tPrev = performance.now();
-
+		var tPrev = performance.now(); //Get current timestamp
 		const timeStep = 1 / 60; // seconds
 		var lastCallTime;
 
 		animate();
 
 
+		function create_gui() {
 
-		var gui = new dat.GUI();
+		//Define GUI from dat-gui (dat.gui.min.js)
+		var gui = new dat.GUI(); //Instantiate GUI
 
+		//Create folder to hold basic objects: Cube, Bunny
 		var drawGroup = gui.addFolder('Objects');
-		var drawCube = drawGroup.add(cubeOptions, 'drawCube').name('Enable Cube')
+		//Button: toggles state of 'cubeOptions.enable'
+		var addCube = drawGroup.add(cubeOptions, 'enable').name('Enable Cube')
 			.onChange((value) => {
-				if (value == true) scene.add(cube);
-				else scene.remove(cube);
+				if (value == true) scene.add(cube); //Add cube to scene
+				else scene.remove(cube); //Remove cube from scene
 		});
+		//Button: toggles state of 'bunnyOptions.enable'
 		var addBunny = drawGroup.add( bunnyOptions, 'enable' ).name( 'Enable Bunny' )
     	.onChange( function(value) {
-      	if ( value == true ) scene.add( bunny );
-      	else scene.remove( bunny );
+      	if ( alue == true) scene.add(bunny); //Add bunny to scene
+      	else scene.remove(bunny); //Remove bunny from scene
     });
 
+		//Create folder to hold parameters of cube rotation
 		var control = gui.addFolder('Cube Control');
 		control.add(cubeOptions, 'rotation_x', 0,10,0.1).name('Rotation - X');
 		control.add(cubeOptions, 'rotation_y', 0,10,0.1).name('Rotation - Y');
 		control.add(cubeOptions, 'rotation_z', 0,10,0.1).name('Rotation - Z');
 
-
+		//Create folder to hold parameters of bunny rotation
 		var bunnyFolder = gui.addFolder('Bunny Control');
 		bunnyFolder.add(bunnyOptions, 'rotation_x', 0,10,0.1).name('Rotation - X');
 		bunnyFolder.add(bunnyOptions, 'rotation_y', 0,10,0.1).name('Rotation - Y');
 		bunnyFolder.add(bunnyOptions, 'rotation_z', 0,10,0.1).name('Rotation - Z');
 
-
-		/* Here is the update */
-		var resetCubeSliders = function (name) {
-    for (var i = 0; i < control.__controllers.length; i++) {
-            control.__controllers[i].setValue(0);
-    	}
-		};
-
-		var resetBunnySliders = function (name) {
-    for (var i = 0; i < bunnyFolder.__controllers.length; i++) {
-            bunnyFolder.__controllers[i].setValue(0);
-    	}
-		};
-
+		//Create folder to hold parameters for camera
 		var cam = gui.addFolder('Camera');
+		//Button: toggles state of camera for Orbit mode
 		cam.add(cameraOptions, 'orbit').onChange((value) =>{
-			if (value == 1) {
-				cameraOptions.orbit = true;
-				console.log(cube.quaternion);
-			}
-
-			else cameraOptions.orbit = false;
+			if (value == 1) cameraOptions.orbit = true; //Enable orbit mode
+			else cameraOptions.orbit = false; //Disable orbit mode
 		});
 
+		//Buttons:
 		gui.add(cubeOptions, 'reset').name('Reset Cube').onChange((value) =>{
-			resetCubeSliders();
+			resetCubeSliders(); //When pressed, resets sliders for cube rotation
 		});
 		gui.add(bunnyOptions, 'reset').name('Reset Bunny').onChange((value) =>{
-			resetBunnySliders();
+			resetBunnySliders();//When pressed, resets sliders for bunny rotation
 		});
 
+		//Create folder to hold options for 'Dice Mode'
 		var diceFolder = gui.addFolder('Dice Control');
 		diceFolder.add(cubeOptions, 'diceMode').name('Dice Mode').onChange((value) =>{
 			if (value == 1){
-
+				//Enable dice mode in cube parameters
 				cubeOptions.diceMode = true;
-				setDiceMode(true);
-				console.log("yea");
-				throwDice();
-
+				//Remove helper grid & add dice plane
+				scene.remove(grid);
+				scene.add(plane);
 			}
 			else {
-
 				cubeOptions.diceMode = false;
-				setDiceMode(false)
-			}
-		});
-		var roll = { add:function(){
-			console.log("rolled")
-		}};
-		diceFolder.add(roll,'add').name('Roll Dice');
-
-
-		function setDiceMode(diceMode) {
-			var time = performance.now();
-      var delta = ( time - tPrev ) / 1000;
-
-			const geometry = new THREE.PlaneGeometry( 30, 30 );
-			const material = new THREE.MeshBasicMaterial( {color: 0x808080, side: THREE.DoubleSide} );
-			const plane = new THREE.Mesh( geometry, material );
-
-			if (diceMode) {
-				scene.remove(grid);
-				scene.add( plane );
-				velocity.z += 1000.0 * delta;
-	      camera.translateZ( velocity.z * delta );
-				plane.rotation.x = Math.PI / 2;
-			} else {
-				velocity.z -= 1000.0 * delta;
-	      camera.translateZ( velocity.z * delta );
+				//Remove dice plane & add helper grid
 				scene.remove(plane);
 				scene.add(grid);
-
 			}
+		});
+		//Button: Executes dice roll when pressed
+		var roll = { add:function(){
+			throwDice();
+		}};
+		//Add button to roll dice
+		diceFolder.add(roll,'add').name('Roll Dice');
+	}
+
+	//Reset rotation sliders for cube (x, y, z)
+	var resetCubeSliders = function (name) {
+	//__controllers -> Array of variable objects in folder (e.g. slider values)
+	//Iterate through each slider
+	for (var i = 0; i < control.__controllers.length; i++) {
+					control.__controllers[i].setValue(0); //Set each slider to 0
 		}
+	};
 
-		function throwDice() {
-				console.log("throwing");
-				boxBody.position.set(0,5,0);
-				cubeOptions.spin = true;
-				var ranX = Math.floor(Math.random() * 10) + 1;
-				var ranY = Math.floor(Math.random() * 10) + 1;
-				var ranZ = Math.floor(Math.random() * 10) + 1;
+	//Reset rotation sliders for bunny (x, y, z)
+	var resetBunnySliders = function (name) {
+	//__controllers -> Array of variable objects in folder (e.g. slider values)
+	//Iterate through each slider
+	for (var i = 0; i < bunnyFolder.__controllers.length; i++) {
+					bunnyFolder.__controllers[i].setValue(0);//Set each slider to 0
+		}
+	};
 
+	//Function to manage rolling dice
+	function throwDice() {
+			boxBody.position.set(0,5,0);//Set starting position of dice
+			//Add pre-spin to dice
+			cubeOptions.spin = true;
+			//Calculate random x,y,z spin variables
+			var ranX = Math.floor(Math.random() * 10) + 1;
+			var ranY = Math.floor(Math.random() * 10) + 1;
+			var ranZ = Math.floor(Math.random() * 10) + 1;
 
-				boxBody.angularVelocity.set(ranX,ranY,ranZ);
-				setTimeout(() => {  boxBody.angularVelocity.set(0,0,0); }, 2000);
-				console.log(cube.rotation.x, "oye");
-
-			}
+			//Give angular velocity to dice before dropped
+			boxBody.angularVelocity.set(ranX,ranY,ranZ);
+			//Remove velocity after 2 seconds
+			//XXX: EITHER: REMOVE VELOCITY AFTER HIT GROUND OR ENABLE PHYSICS AFTER TIME PERIOD
+			setTimeout(() => {  boxBody.angularVelocity.set(0,0,0); }, 2000);
+		}
 
 
 		// Listen for keyboard events, to react to them.
 		// Note: there are also other event listeners, e.g. for mouse events.
-		document.addEventListener('keydown', handleKeyDown);
-		document.addEventListener('keyup', handleKeyUp)
+		document.addEventListener('keydown', handleKeyDown); //Executes on key press (down)
+		document.addEventListener('keyup', handleKeyUp)//Executes on key release (up)
 
 		function cubeControl() {
 			if (cubeOptions) {
+				//Accumulate rotation vector for each axis
 				cube.rotation.x += cubeOptions.rotation_x * 0.01;
 				cube.rotation.y += cubeOptions.rotation_y * 0.01;
 				cube.rotation.z += cubeOptions.rotation_z * 0.01;
@@ -293,46 +277,46 @@
 		}
 		function bunnyControl() {
 			if (bunnyOptions.enable) {
+				//Accumulate rotation vector for each axis
 				bunny.rotation.x += bunnyOptions.rotation_x * 0.01;
 				bunny.rotation.y += bunnyOptions.rotation_y * 0.01;
 				bunny.rotation.z += bunnyOptions.rotation_z * 0.01;
 			}
 		}
 
+		//Function to end each dice roll
 		function stopRoll() {
-			console.log(boxBody.quaternion);
+			var localUp = new CANNON.Vec3();
+			//Create quaternion object for dice
+			var inverseBodyOrientation = new CANNON.Quaternion();
+			//Calculate limit (45 degrees) in radians for dice resting angle
+			var limit = Math.sin(Math.PI/4);
+
+			//Set the world up vector to local (dice) space
 			localUp.set(0,1,0);
+			//Invert quaternion for dice
 			boxBody.quaternion.inverse(inverseBodyOrientation);
+			//vmult = multiply local upn vector by quaternion
 			inverseBodyOrientation.vmult(localUp, localUp);
 			var result;
 
-			// Check which side is up
+			//Determine vector has the greatest 'up' component
 			if(localUp.x > limit){
-					// Positive x is up
 					alert("You rolled: 1");
 			} else if(localUp.x < -limit){
 					alert("You rolled: 2");
-					// Negative x is up
 			} else if(localUp.y > limit){
 				alert("You rolled: 3");
-					// Positive y is up
 			} else if(localUp.y < -limit){
 				alert("You rolled: 4");
-				result = 4;
-					// Negative y is up
 			} else if(localUp.z > limit){
 				alert("You rolled: 5")
-				result - 5;
-					// Positive z is up
 			} else if(localUp.z < -limit){
 				alert("You rolled: 6");
-				result = 6;
-					// Negative z is up
 			} else {
 				console.log("not flat")
-					// The box is not resting flat on the ground plane
+				//No greatest up component i.e. dice not flat
 			}
-
 		}
 
 		// Scene initialisation. This function is only run once, at the very beginning.
@@ -350,6 +334,7 @@
 
 			// TASK: Visualise the axes of the global coordinate system (requirment 2).------
 
+			//Create material for each axis line (changing color for each)
 			const lineMatX = new THREE.LineBasicMaterial( {color: 0xff0000});//Red
 			const lineMatY = new THREE.LineBasicMaterial( {color: 0x0ff00});//Green
 			const lineMatZ = new THREE.LineBasicMaterial( {color: 0x000ff});//Blue
@@ -383,14 +368,13 @@
 			//END TASK 2-------------------------------
 
 
-			// Basic ambient lighting.
-			//scene.add(new THREE.AmbientLight(0xffffff));
 			// TASK: add more complex lighting for 'face' rendering mode (requirement 4).
-			const color = 0xFFFFFF;
-			const intensity = 2;
+			const color = 0xFFFFFF; //Light color
+			const intensity = 2; //Light intensity
+			//Define light
 			const light = new THREE.DirectionalLight(color, intensity);
-			light.position.set(-1, 2, 4);
-			scene.add(light);
+			light.position.set(-1, 2, 4); //Set light position
+			scene.add(light);//Add light to scene
 
 
 			// Set up the Web GL renderer.
@@ -439,7 +423,7 @@
 		}
 
 		function setCubeRender(mode) {
-			if (cubeOptions.drawCube) {
+			if (cubeOptions.enable) {
 				if (mode == "edge") {
 					scene.remove(cube);
 					const materialWire = new THREE.MeshPhongMaterial({ color: 0x00ffff, wireframe: true });
@@ -463,9 +447,6 @@
 
 		// Animation loop function. This function is called whenever an update is required.
 
-		var localUp = new CANNON.Vec3();
-		var inverseBodyOrientation = new CANNON.Quaternion();
-		var limit = Math.sin(Math.PI/4);
 
 		function animate() {
 			requestAnimationFrame(animate);
